// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MicroAppsAPIGwy works with no params 1`] = `
Object {
  "Resources": Object {
    "constructgwyE80472DA": Object {
      "Properties": Object {
        "Name": "stack-microapps",
        "ProtocolType": "HTTP",
      },
      "Type": "AWS::ApiGatewayV2::Api",
    },
    "constructlogsBC77618C": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "LogGroupName": "/aws/apigwy/stack-microapps",
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "constructlogsrole387D81E6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "constructlogsroleDefaultPolicyD4FA927F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "constructlogsBC77618C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "constructlogsroleDefaultPolicyD4FA927F",
        "Roles": Array [
          Object {
            "Ref": "constructlogsrole387D81E6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "constructstage3B55CA4F": Object {
      "Properties": Object {
        "ApiId": Object {
          "Ref": "constructgwyE80472DA",
        },
        "AutoDeploy": true,
        "StageName": "$default",
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
  },
}
`;

exports[`MicroAppsAPIGwy works with params 1`] = `
Object {
  "Resources": Object {
    "cert56CA94EB": Object {
      "Properties": Object {
        "DomainName": "*.test.pwrdrvr.com",
        "DomainValidationOptions": Array [
          Object {
            "DomainName": "*.test.pwrdrvr.com",
            "ValidationDomain": "pwrdrvr.com",
          },
        ],
        "ValidationMethod": "EMAIL",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
    "constructapimaporigin7C2B9F89": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "constructorigindnDD3F36CE",
        "constructstage3B55CA4F",
      ],
      "Properties": Object {
        "ApiId": Object {
          "Ref": "constructgwyE80472DA",
        },
        "DomainName": "mydeploy-origin.test.pwrdrvr.com",
        "Stage": "/myprefix/",
      },
      "Type": "AWS::ApiGatewayV2::ApiMapping",
      "UpdateReplacePolicy": "Delete",
    },
    "constructgwyE80472DA": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Name": "mydeploy-mysuffix",
        "ProtocolType": "HTTP",
      },
      "Type": "AWS::ApiGatewayV2::Api",
      "UpdateReplacePolicy": "Delete",
    },
    "constructlogsBC77618C": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "LogGroupName": "/aws/apigwy/mydeploy-mysuffix",
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "constructlogsrole387D81E6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "constructlogsroleDefaultPolicyD4FA927F": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "constructlogsBC77618C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "constructlogsroleDefaultPolicyD4FA927F",
        "Roles": Array [
          Object {
            "Ref": "constructlogsrole387D81E6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "constructmapping8BB481CC": Object {
      "DependsOn": Array [
        "constructmicroappsappsedgedn308BF2C3",
        "constructstage3B55CA4F",
      ],
      "Properties": Object {
        "ApiId": Object {
          "Ref": "constructgwyE80472DA",
        },
        "DomainName": "mydeploy.test.pwrdrvr.com",
        "Stage": "/myprefix/",
      },
      "Type": "AWS::ApiGatewayV2::ApiMapping",
    },
    "constructmicroappsappsedgedn308BF2C3": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DomainName": "mydeploy.test.pwrdrvr.com",
        "DomainNameConfigurations": Array [
          Object {
            "CertificateArn": Object {
              "Ref": "cert56CA94EB",
            },
            "EndpointType": "REGIONAL",
          },
        ],
      },
      "Type": "AWS::ApiGatewayV2::DomainName",
      "UpdateReplacePolicy": "Delete",
    },
    "constructoriginarecord70039239": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "AliasTarget": Object {
          "DNSName": Object {
            "Fn::GetAtt": Array [
              "constructorigindnDD3F36CE",
              "RegionalDomainName",
            ],
          },
          "HostedZoneId": Object {
            "Fn::GetAtt": Array [
              "constructorigindnDD3F36CE",
              "RegionalHostedZoneId",
            ],
          },
        },
        "HostedZoneId": Object {
          "Ref": "zoneEB40FF1E",
        },
        "Name": "mydeploy-origin.test.pwrdrvr.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
      "UpdateReplacePolicy": "Delete",
    },
    "constructorigindnDD3F36CE": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DomainName": "mydeploy-origin.test.pwrdrvr.com",
        "DomainNameConfigurations": Array [
          Object {
            "CertificateArn": Object {
              "Ref": "cert56CA94EB",
            },
            "EndpointType": "REGIONAL",
          },
        ],
      },
      "Type": "AWS::ApiGatewayV2::DomainName",
      "UpdateReplacePolicy": "Delete",
    },
    "constructstage3B55CA4F": Object {
      "Properties": Object {
        "ApiId": Object {
          "Ref": "constructgwyE80472DA",
        },
        "AutoDeploy": true,
        "StageName": "/myprefix/",
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
    "zoneEB40FF1E": Object {
      "Properties": Object {
        "Name": "test.pwrdrvr.com.",
      },
      "Type": "AWS::Route53::HostedZone",
    },
  },
}
`;
